--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "php": ">=7.0",
     "ext-simplexml": "*",
     "ext-libxml": "*",
+    "ext-openssl ": "*",
     "guzzlehttp/guzzle": "^6.3",
     "guzzlehttp/promises": "^1.3",
     "guzzlehttp/psr7": "^1.4"
