--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,6 @@
   "license": "MIT",
   "require": {
     "php": ">=7.0",
-    "ext-simplexml": "*",
-    "ext-libxml": "*",
-    "ext-openssl ": "*",
     "guzzlehttp/guzzle": "^6.3",
     "guzzlehttp/promises": "^1.3",
     "guzzlehttp/psr7": "^1.4"
@@ -27,5 +24,8 @@
     "psr-4": {
       "georgeT\\ElectronicContractFdd\\": "src/"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^6.2"
   }
 }
