--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "php": ">=7.0",
     "guzzlehttp/guzzle": "^6.3",
     "guzzlehttp/promises": "^1.3",
-    "guzzlehttp/psr7": "^1.4"
+    "guzzlehttp/psr7": "^1.4",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
