--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "guzzlehttp/guzzle": "^6.3",
     "guzzlehttp/promises": "^1.3",
     "guzzlehttp/psr7": "^1.4",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-openssl": "*"
   },
   "autoload": {
     "psr-4": {
