--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.0",
-    "guzzlehttp/guzzle": "^6.3",
+    "guzzlehttp/guzzle": "^6.3|^7",
     "guzzlehttp/promises": "^1.3",
     "guzzlehttp/psr7": "^1.4",
     "ext-json": "*",
